--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ img {
 }
 
 .container {
-  max-width: 1240px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -103,6 +103,120 @@ img {
   }
   .header__btn {
     display: inline-block;
+  }
+}
+
+.main__title {
+  font-family: Rubik;
+  font-size: 66px;
+  font-weight: 500;
+  line-height: 78px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.title {
+  font-family: Rubik;
+  font-size: 66px;
+  font-weight: 500;
+  line-height: 78px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  color: #ff6838;
+}
+
+.main__text {
+  color: #363853;
+  font-family: Rubik;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+
+.main__btn {
+  color: white;
+  font-family: Rubik;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: center;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 22px 40px 0px rgba(255, 104, 56, 0.19);
+          box-shadow: 0px 22px 40px 0px rgba(255, 104, 56, 0.19);
+  background-color: #ff7a50;
+}
+
+.main__btn1 {
+  color: #363853;
+  font-family: Rubik;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: center;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.main__img {
+  max-width: 700px;
+}
+
+.main__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media only screen and (max-width: 820px) {
+  .main__section {
+    max-width: 752px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .main__section {
+    max-width: 665px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .main__section {
+    max-width: 440px;
+  }
+  .main__title {
+    font-size: 45px;
+  }
+  .title {
+    font-size: 45px;
+  }
+  .main__text {
+    font-size: 16px;
+  }
+  .main__btn {
+    font-size: 16px;
+  }
+  .btn {
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=main.css.map */
