--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ img {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1240px;
   margin: 0 auto;
 }
 
@@ -204,10 +204,10 @@ img {
     max-width: 440px;
   }
   .main__title {
-    font-size: 45px;
+    font-size: 40px;
   }
   .title {
-    font-size: 45px;
+    font-size: 40px;
   }
   .main__text {
     font-size: 16px;
@@ -217,6 +217,79 @@ img {
   }
   .btn {
     font-size: 16px;
+  }
+}
+
+.ports__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 50px;
+}
+
+.ports__title {
+  font-family: Rubik;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 43px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: capitalize;
+  margin-top: 30px;
+}
+
+.ports__btn {
+  background: white;
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
+  background: #ff7a50;
+  padding: 6px 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: none;
+  gap: 6px;
+}
+
+.title1 {
+  color: white;
+  font-family: Rubik;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+@media only screen and (max-width: 864px) {
+  .ports__item {
+    max-width: 785px;
+  }
+}
+
+@media only screen and (max-width: 785px) {
+  .ports__list {
+    max-width: 774px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 774px) {
+  .ports__item {
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=main.css.map */
